--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
+  "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.20.0"
+  },
   "eslintConfig": {
     "extends": [
       "react-app",
@@ -31,6 +34,7 @@
     "react-dom": "^19.0.0"
   },
   "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "react-scripts": "^5.0.1"
   }
 }
